Fixed compare buttons because they moved out of place again

--- a/style.css
+++ b/style.css
@@ -1114,7 +1114,7 @@ li {
 }
 
 .compareGraphMargin {
-    margin-top: 70px;
+    margin-top: -170px;
 }
 
 #compareChartTitle {
